--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,4 @@
 {% extends "gram/base.html" %} {%block content %}
 {% load crispy_forms_tags %}
-    <h1>{{ users.username }}</h1>
+    <h1>{{ user.username }}</h1>
 {% endblock content %}
