--- a/gram/templates/gram/base.html
+++ b/gram/templates/gram/base.html
@@ -59,13 +59,13 @@
           </div>
           <div class="col-md-4">
             <div class="content-section">
-              <h3>Our Sidebar</h3>
-              <p class='text-muted'>You can put any information here you'd like.
+              <h3>Instagram</h3>
+              <p class='text-muted'>You can follow,like and add anything of your liking!
                 <ul class="list-group">
                   <li class="list-group-item list-group-item-light">Latest Posts</li>
                   <li class="list-group-item list-group-item-light">Announcements</li>
-                  <li class="list-group-item list-group-item-light">Calendars</li>
-                  <li class="list-group-item list-group-item-light">etc</li>
+                  <li class="list-group-item list-group-item-light">Videos</li>
+                  <li class="list-group-item list-group-item-light">Calenders</li>
                 </ul>
               </p>
             </div>
