--- a/gram/static/gram/styles.css
+++ b/gram/static/gram/styles.css
@@ -3,6 +3,11 @@ body {
     background: #fafafa;
     color: #333333;
     margin-top: 5rem;
+    /* background-image: url('https://images.unsplash.com/photo-1572573309811-48474d1891b7?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60');
+    background-repeat: no-repeat;
+    background-position: cover;
+    height: 100vh;
+    width: 100vh; */
   }
   
   h1, h2, h3, h4, h5, h6 {
