--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -14,8 +14,7 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Profile Information</legend>
-      {{ u_form|crispy }}
-      {{ p_form|crispy }}
+      {{ u_form|crispy }} {{ p_form|crispy }}
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-info" type="submit">Update</button>
